# libqrencode

./: CMakeLists.txt
gtests/: CMakeLists.txt  compression.cpp  compression.hpp  hello_test.cc
